--- a/startpage/root____files/main.css
+++ b/startpage/root____files/main.css
@@ -23,6 +23,16 @@ p {
     background-color: #E5D7A6;
     opacity: 0.4;
 }
+#links {
+    overflow-y: auto;
+    overflow-x: hidden;
+    color: #231D18;
+    top: -2ex;
+    border: 1px solid #6e6458;
+    overflow: hidden;
+    background-color: #E5D7A6;
+    opacity: 0.4;
+}
 #prompt, #input, .output, .prompt_Old, .input_Old, #caret, .ppost, #post{
     display: inline;
     font-family: "Hack", monospace;
